<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/drawer_menu_home"/>
        <item android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/drawer_menu_profile"/>
        <item android:id="@+id/favorites"
            android:icon="@drawable/ic_like"
            android:title="@string/drawer_menu_favorites"/>
        <item android:id="@+id/recipes"
            android:icon="@drawable/ic_recipes"
            android:title="@string/drawer_menu_recipes"/>
        <item android:id="@+id/shopping_list"
            android:icon="@drawable/ic_shopping_list"
            android:title="@string/drawer_menu_shopping_list"/>
        <item android:id="@+id/categories"
            android:icon="@drawable/categories"
            android:title="@string/drawer_menu_categories"/>
        <item android:id="@+id/articles"
            android:icon="@drawable/articles"
            android:title="@string/articles"/>
        <item android:id="@+id/privacy"
            android:title="@string/drawer_menu_privacy"
            android:icon="@drawable/privacy"/>
        <item android:id="@+id/terms_of_use"
            android:title="@string/drawer_menu_terms"
            android:icon="@drawable/terms_of_use"/>
    </group>
    <item android:title="@string/drawer_menu_app">
        <menu>
            <item android:id="@+id/rate"
                android:icon="@drawable/rate"
                android:title="@string/drawer_menu_rate_app"/>
            <item android:id="@+id/share"
                android:icon="@drawable/share"
                android:title="@string/drawer_menu_share_app"/>
            <item android:id="@+id/report"
                android:icon="@drawable/bug"
                android:title="@string/drawer_menu_report_bug"
                />
            <item android:id="@+id/contact_us"
                android:icon="@drawable/email"
                android:title="@string/drawer_menu_contact"/>
            <item android:id="@+id/exit"
                android:icon="@drawable/exit"
                android:title="@string/drawer_menu_exit"/>
        </menu>
    </item>
</menu>