<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.SingleRecipeActivity">
    <item
        android:id="@+id/share"
        android:title="@string/drawer_menu_share_app"
        android:icon="@drawable/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/like"
        android:title="@string/add_to_fav"
        android:icon="@drawable/add_to_fav"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/liked"
        android:visible="false"
        android:title="@string/add_to_fav"
        android:icon="@drawable/added_to_fav"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/rate"
        android:title="@string/rate"
        android:icon="@drawable/rate_recipe"
        app:showAsAction="ifRoom" />
</menu>