<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddNewRecipeActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_recipe_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/grayText"
        app:titleTextColor="@color/white"
        app:subtitleTextColor="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="0dp"/>
    <ScrollView
        android:layout_below="@id/add_recipe_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/recipe_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/app_name" />
            <RelativeLayout
                android:id="@+id/relative_image"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="200dp">
                <ImageView
                    android:id="@+id/edit_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/btn_design_small"
                    android:backgroundTint="#73000000"
                    android:padding="10dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="17dp"
                    android:layout_marginEnd="0dp"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/add_image" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/allow_permission_image"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="200dp">
                <ImageView
                    android:id="@+id/allow_permission"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/btn_design_small"
                    android:backgroundTint="#73000000"
                    android:padding="10dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="17dp"
                    android:layout_marginEnd="0dp"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/add_image" />
            </RelativeLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/recipe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:layout_below="@id/relative_image"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:gravity="start"
                    android:textSize="14sp"
                    android:hint="@string/title"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/recipe_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:layout_below="@id/recipe_title"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textMultiLine"
                    android:textSize="14sp"
                    android:lines="5"
                    android:gravity="start"
                    android:singleLine="false"
                    android:hint="@string/description"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/recipe_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:layout_below="@id/recipe_description"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="numberDecimal"
                    android:textSize="14sp"
                    android:hint="@string/time"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/recipe_servings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:layout_below="@id/recipe_time"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="numberDecimal"
                    android:textSize="14sp"
                    android:hint="@string/servings"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/recipe_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:layout_below="@id/recipe_servings"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="numberDecimal"
                    android:textSize="14sp"
                    android:hint="@string/calories"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:id="@+id/categories_spinner_linear"
                android:layout_below="@id/recipe_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/category"/>
                <Spinner
                    android:id="@+id/spinner_categories"
                    android:spinnerMode="dropdown"
                    android:background="@drawable/gradient_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/meals_spinner_linear"
                android:layout_below="@id/categories_spinner_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/meal"/>
                <Spinner
                    android:id="@+id/spinner_meals"
                    android:spinnerMode="dropdown"
                    android:background="@drawable/gradient_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/cuisines_spinner_linear"
                android:layout_below="@id/meals_spinner_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/cuisine"/>
                <Spinner
                    android:id="@+id/spinner_cuisines"
                    android:spinnerMode="dropdown"
                    android:background="@drawable/gradient_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/vegetarians_spinner_linear"
                android:layout_width="match_parent"
                android:layout_below="@id/cuisines_spinner_linear"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/veg_add"/>
                <Spinner
                    android:id="@+id/spinner_vegetarian"
                    android:spinnerMode="dropdown"
                    android:background="@drawable/gradient_spinner"
                    android:entries="@array/vegetarian_array"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/video_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:layout_below="@id/vegetarians_spinner_linear"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textUri"
                    android:textSize="14sp"
                    android:hint="@string/video_url"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/next"
                android:layout_below="@id/video_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="60dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:background="@drawable/login_btn"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/add_ingredients"/>
            <LinearLayout
                android:id="@+id/bottom_banner_main_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>